@@ -1,3 +1,10 @@
+2010-05-12  Chris Toshok  <toshok@ximian.com>
+
+	* lunar-launcher.cpp (load_app): pull the installer
+	service/apprecord logic out of here, and put it..
+	(create_window): .. here so we can get at the origin host, which
+	goes in the window's titlebar.
+
 2010-05-13  Rolf Bjarne Kvinge  <RKvinge@novell.com>
 
 	* lunar-launcher.cpp: gtk_main needs to be surrounded by
